feat: 希望エリア・休日勤務可能・平日勤務可能のフォーム作成

--- a/src/resources/scss/pages/users/edit.scss
+++ b/src/resources/scss/pages/users/edit.scss
@@ -24,4 +24,10 @@
       margin-bottom: 30px;
     }
   }
+  .checkbox-form-container {
+    display: flex;
+    &__form {
+      flex-basis: 50%;
+    }
+  }
 }
