--- a/src/resources/scss/landing-page.scss
+++ b/src/resources/scss/landing-page.scss
@@ -1,4 +1,5 @@
 @import './base.scss';
+@import './variables.scss';
 
 .landing-page {
   h1, h2, h3, section, p {
@@ -10,11 +11,11 @@
   }
 
   h2 {
-    font-size: 60px;
+    font-size: $h2FontSize;
   }
 
   h3 {
-    font-size: 50px;
+    font-size: $h3FontSize;
   }
 
   @mixin main-font {
@@ -28,10 +29,10 @@
 
   p {
     @include main-font;
-    font-size: 44px;
+    font-size: 1rem;
 
     width: 86%;
-    margin: 45px auto;
+    margin: 1rem auto;
   }
 
   .center-align-wrapper {
