--- a/src/resources/scss/pages/offers/index.scss
+++ b/src/resources/scss/pages/offers/index.scss
@@ -14,11 +14,15 @@
 .offers-index-page {
   .bg {
     background-color: #fbf7f4;
-    margin-bottom: 1em;
-    height: 100vh;
+    min-height: 13rem;
+    padding-bottom: 1em;
+
     h2 {
       margin: 0;
       padding: 0.5em 1em;
+    }
+    p {
+      margin: 2rem;
     }
     .status {
       display: -webkit-flex;
@@ -64,7 +68,7 @@
         }
       }
       .comment {
-        margin-left: 6em;
+        margin-left: 5rem;
       }
     }
   }
