--- a/src/resources/scss/_variables.scss
+++ b/src/resources/scss/_variables.scss
@@ -1,3 +1,5 @@
+$main-btn-bg: linear-gradient(to right, #FF9966, #FF6666) !default;
+
 $mainBtnLightColor: #FF9966;
 $mainBtnColor: #FF6666;
 $mainBtnFontSize: 1.1rem;
