fix : 経歴と希望する働き方の間隔を空ける

--- a/src/resources/scss/pages/trainers/show.scss
+++ b/src/resources/scss/pages/trainers/show.scss
@@ -54,6 +54,7 @@
       }
     }
     .career {
+      margin-bottom: 3rem;
       .careerDetail {
         background-color: #fff;
         padding: 0.5rem 2rem 1rem;
